--- a/src/main/resources/com/bilibili/musicplayer/LibraryView.fxml
+++ b/src/main/resources/com/bilibili/musicplayer/LibraryView.fxml
@@ -1,14 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.Priority?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.bilibili.musicplayer.LibraryView"
-            prefHeight="400.0" prefWidth="600.0">
+<VBox fx:id="rootView" alignment="TOP_CENTER" spacing="20" styleClass="main-content" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bilibili.musicplayer.controller.LibraryController">
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
+    <Label text="我的音乐" styleClass="view-title"/>
 
-</AnchorPane>
+    <TableView fx:id="songTableView" VBox.vgrow="ALWAYS">
+        <columns>
+            <TableColumn text="标题" prefWidth="250">
+                <cellValueFactory>
+                    <javafx.scene.control.cell.PropertyValueFactory property="title" />
+                </cellValueFactory>
+            </TableColumn>
+            <TableColumn text="艺术家" prefWidth="150">
+                <cellValueFactory>
+                    <javafx.scene.control.cell.PropertyValueFactory property="artist" />
+                </cellValueFactory>
+            </TableColumn>
+            <TableColumn text="时长" prefWidth="80">
+                <cellValueFactory>
+                    <javafx.scene.control.cell.PropertyValueFactory property="durationSeconds" />
+                </cellValueFactory>
+            </TableColumn>
+            <TableColumn text="下载日期" prefWidth="150">
+                <cellValueFactory>
+                    <javafx.scene.control.cell.PropertyValueFactory property="downloadDate" />
+                </cellValueFactory>
+            </TableColumn>
+            <TableColumn text="文件路径" prefWidth="300">
+                <cellValueFactory>
+                    <javafx.scene.control.cell.PropertyValueFactory property="localFilePath" />
+                </cellValueFactory>
+            </TableColumn>
+            <!-- 更多列可以根据需要添加 -->
+        </columns>
+        <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+        </columnResizePolicy>
+    </TableView>
+
+    <Label fx:id="statusLabel" text="加载音乐库..." styleClass="status-label"/>
+
+</VBox>
