--- a/src/main/resources/com/bilibili/musicplayer/PlaybackBar.fxml
+++ b/src/main/resources/com/bilibili/musicplayer/PlaybackBar.fxml
@@ -1,14 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Priority?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.bilibili.musicplayer.PlaybackBar"
-            prefHeight="400.0" prefWidth="600.0">
+<HBox fx:id="rootView" alignment="CENTER_LEFT" spacing="15" styleClass="playback-bar" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bilibili.musicplayer.controller.PlaybackController">
+    <padding>
+        <Insets top="10" right="20" bottom="10" left="20"/>
+    </padding>
 
-</AnchorPane>
+    <!-- 播放/暂停按钮 -->
+    <Button fx:id="playPauseButton" onAction="#handlePlayPause">
+        <graphic>
+            <ImageView fitHeight="24" fitWidth="24" pickOnBounds="true" preserveRatio="true">
+                <image>
+                    <!-- 初始图标可以是播放或暂停，这里用一个占位符，实际会通过CSS或代码切换 -->
+                    <Image url="@/icons/play_icon.png" />
+                </image>
+            </ImageView>
+        </graphic>
+    </Button>
+
+    <!-- 停止按钮 -->
+    <Button fx:id="stopButton" onAction="#handleStop">
+        <graphic>
+            <ImageView fitHeight="24" fitWidth="24" pickOnBounds="true" preserveRatio="true">
+                <image>
+                    <Image url="@/icons/stop_icon.png" />
+                </image>
+            </ImageView>
+        </graphic>
+    </Button>
+
+    <!-- 当前歌曲信息 -->
+    <Label fx:id="currentSongLabel" text="未选择歌曲" styleClass="current-song-label" HBox.hgrow="NEVER"/>
+
+    <!-- 进度条和时间 -->
+    <Label fx:id="currentTimeLabel" text="00:00" styleClass="time-label"/>
+    <Slider fx:id="progressBar" min="0" max="1" HBox.hgrow="ALWAYS"/>
+    <Label fx:id="totalTimeLabel" text="00:00" styleClass="time-label"/>
+
+    <!-- 占位符，用于将音量控制推到右边 -->
+    <Region HBox.hgrow="ALWAYS"/>
+
+    <!-- 音量控制 -->
+    <ImageView fitHeight="20" fitWidth="20" pickOnBounds="true" preserveRatio="true">
+        <image>
+            <Image url="@/icons/volume_icon.png" />
+        </image>
+    </ImageView>
+    <Slider fx:id="volumeSlider" min="0" max="100" value="100" prefWidth="100"/>
+
+</HBox>
