--- a/src/main/resources/com/bilibili/musicplayer/mainwindow.fxml
+++ b/src/main/resources/com/bilibili/musicplayer/mainwindow.fxml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.fxml.FXMLLoader?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
+<BorderPane fx:id="rootPane" stylesheets="@/css/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bilibili.musicplayer.controller.MainController">
+    <!-- 左侧区域：侧边栏 -->
+    <left>
+        <fx:include source="LeftSidebar.fxml" fx:id="leftSidebar"/>
+    </left>
 
-</AnchorPane>
+    <!-- 中央区域：主内容区，用于切换不同的视图  -->
+    <center>
+        <StackPane fx:id="mainContentPane">
+            <!-- 初始显示下载视图 -->
+            <fx:include source="DownloadView.fxml" fx:id="downloadView"/>
+            <!-- 歌曲库视图，默认隐藏 -->
+            <fx:include source="LibraryView.fxml" fx:id="libraryView" visible="false"/>
+        </StackPane>
+    </center>
+
+    <!-- 底部区域：播放控制条 -->
+    <bottom>
+        <fx:include source="PlaybackBar.fxml" fx:id="playbackBar"/>
+    </bottom>
+</BorderPane>
