实现了暂停上一首下一首播放模式等功能

--- a/src/main/resources/com/bilibili/musicplayer/PlaybackBar.fxml
+++ b/src/main/resources/com/bilibili/musicplayer/PlaybackBar.fxml
@@ -22,7 +22,8 @@
             <graphic>
                 <ImageView fitHeight="24" fitWidth="24" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@/icons/normal.png" />
+                        <!-- 将 initial.png 更改为 repeat_all.png -->
+                        <Image url="@/icons/repeat_all.png" />
                     </image>
                 </ImageView>
             </graphic>
