--- a/ui/windows/MainWindow.ui
+++ b/ui/windows/MainWindow.ui
@@ -19,7 +19,21 @@
     <height>600</height>
    </size>
   </property>
+  <property name="styleSheet">
+   <string>QMainWindow {
+    background-color: #1A1A1A;
+    color: #FFFFFF;
+}</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string>QWidget#centralwidget {
+    background-color: #1A1A1A;
+    border: none;
+    margin: 0px;
+    padding: 0px;
+}</string>
+   </property>
    <layout class="QVBoxLayout" name="mainLayout">
     <property name="spacing">
      <number>0</number>
@@ -37,7 +51,13 @@
      <number>0</number>
     </property>
     <item>
-     <widget class="QWidget" name="navigationWidget">
+     <widget class="QWidget" name="titleBarWidget">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="minimumSize">
        <size>
         <width>0</width>
@@ -50,10 +70,27 @@
         <height>60</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string>#titleBarWidget {
+    background-color: #2A2A2A;
+    border-bottom: 2px solid #FB7299;
+}</string>
+      </property>
      </widget>
     </item>
     <item>
      <widget class="QStackedWidget" name="contentStackedWidget">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>1</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="styleSheet">
+       <string>QStackedWidget {
+    background-color: #1A1A1A;
+}</string>
+      </property>
       <property name="currentIndex">
        <number>0</number>
       </property>
@@ -77,38 +114,98 @@
         <item>
          <widget class="QLabel" name="libraryPlaceholder">
           <property name="text">
-           <string>音乐库视图 - 待实现</string>
+           <string>🎵 音乐库内容区域
+
+稍后将在这里显示：
+• 歌曲列表
+• 搜索功能
+• 分类筛选</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
+          </property>
+          <property name="styleSheet">
+           <string>color: #666666;
+font-size: 18px;
+background-color: transparent;</string>
           </property>
          </widget>
         </item>
        </layout>
       </widget>
       <widget class="QWidget" name="downloadManagerPage">
-       <layout class="QVBoxLayout" name="downloadLayout">
+       <layout class="QHBoxLayout" name="downloadLayout">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
         <item>
          <widget class="QLabel" name="downloadPlaceholder">
           <property name="text">
-           <string>下载管理视图 - 待实现</string>
+           <string>📥 下载管理内容区域
+
+稍后将在这里显示：
+• 下载队列
+• 下载进度
+• 已完成下载</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
+          </property>
+          <property name="styleSheet">
+           <string>color: #666666;
+font-size: 18px;
+background-color: transparent;</string>
           </property>
          </widget>
         </item>
        </layout>
       </widget>
       <widget class="QWidget" name="settingsPage">
-       <layout class="QVBoxLayout" name="settingsLayout">
+       <layout class="QHBoxLayout" name="settingsLayout">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
         <item>
          <widget class="QLabel" name="settingsPlaceholder">
           <property name="text">
-           <string>设置视图 - 待实现</string>
+           <string>⚙️ 设置内容区域
+
+稍后将在这里显示：
+• 播放设置
+• 下载设置
+• 界面设置</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
+          </property>
+          <property name="styleSheet">
+           <string>color: #666666;
+font-size: 18px;
+background-color: transparent;</string>
           </property>
          </widget>
         </item>
@@ -118,23 +215,33 @@
     </item>
     <item>
      <widget class="QWidget" name="playbackBarWidget">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="minimumSize">
        <size>
         <width>0</width>
-        <height>80</height>
+        <height>90</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>16777215</width>
-        <height>80</height>
+        <height>90</height>
        </size>
+      </property>
+      <property name="styleSheet">
+       <string>#playbackBarWidget {
+    background-color: #2A2A2A;
+    border-top: 1px solid #444444;
+}</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
  </widget>
- <resources/>
- <connections/>
 </ui>
